--- a/SpamDetectorClient/index.html
+++ b/SpamDetectorClient/index.html
@@ -25,9 +25,17 @@
 <body>
 
   <!-- Add your site or application content here -->
+  <main>
+    <div id="banner">
+      <h1>Spam Detector Dashboard</h1>
+    </div>
+    <div id="body">
 
+    </div>
+    <div id="footer">
 
-
+    </div>
+  </main>
 
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
