--- a/SpamDetectorClient/about.html
+++ b/SpamDetectorClient/about.html
@@ -7,6 +7,25 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+  <div id="banner">
+    <h1>Spam Detector Dashboard</h1>
+  </div>
+    <div class="sidebar">
+      <a href="index.html">Dashboard</a>
+      <a class="active" href="about.html">About</a>
+    </div>
+  <div class="content">
+    <div class="about">
+      <h1>Our Team</h1>
+      <ul>
+        <li>Adam Orfao</li>
+        <li>Ryan Don</li>
+      </ul>
+    </div>
+  </div>
+  <div id="footer">
+    <a href="http://surl.li/fmuwx">Copyright ℗ Orfao Don 2023</a>
+  </div>
 
 
 </body>
